add project section

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,6 +1,7 @@
 about: "ABOUT"
 experience: "EXPERIENCE"
 skills: "SKILLS"
+projects: "PROJECTS"
 404_title: "Page Not Found"
 404_message: "Sorry, the page you are looking for does not exist."
 back_home: "Back to Home"
