--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -1,6 +1,7 @@
 about: "关于我"
 experience: "经验"
 skills: "专业技术技能"
+projects: "项目"
 404_title: "页面未找到"
 404_message: "抱歉，您所寻找的页面不存在。"
 back_home: "返回首页"
