--- a/i18n/fil.yaml
+++ b/i18n/fil.yaml
@@ -2,6 +2,7 @@ about: "TUNGKOL SA AKIN"
 experience: "KARANASAN"
 skills: "KASANAYAN"
 projects: "MGA PROYEKTO"
+languages: "MGA WIKA"
 404_title: "Hindi Natagpuan ang Pahina"
 404_message: "Paumanhin, ang pahinang hinahanap mo ay hindi umiiral o maaaring tinanggal na."
 back_home: "Bumalik sa Home"
