--- a/i18n/ja.yaml
+++ b/i18n/ja.yaml
@@ -2,6 +2,7 @@ about: "自己紹介"
 experience: "職務経験"
 skills: "技術スキル"
 projects: "プロジェクト"
+languages: "言語"
 404_title: "ページが見つかりません"
 404_message: "申し訳ありませんが、お探しのページは存在しません。"
 back_home: "ホームに戻る"
