--- a/i18n/th.yaml
+++ b/i18n/th.yaml
@@ -2,6 +2,7 @@ about: "เกี่ยวกับฉัน"
 experience: "ประสบการณ์"
 skills: "ทักษะ"
 projects: "โครงการ"
+languages: "ภาษา"
 404_title: "ไม่พบหน้า"
 404_message: "ขออภัย ไม่พบหน้าที่คุณกำลังค้นหา"
 back_home: "กลับไปหน้าหลัก"
